--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/three": "^0.177.0",
@@ -24,9 +26,13 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "tailwindcss": "^4.1.10",
     "three": "^0.177.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.3"
   }
 }
